# tnesh-stack

./: 404.html  Cargo.toml  README.md  flake.nix  hashmap.json  index.html  integrating-with-frameworks.html  introduction.html  package.json  pnpm-lock.yaml  scaffolding-a-happ.html  scaffolding-a-zome-module.html
assets/: app.0wKYkIie.js  (+42 more)
crates/scaffold_tnesh_zome/: Cargo.toml  default.nix
crates/scaffold_tnesh_zome/src/: lib.rs
crates/scaffold_tnesh_zome/template/: .gitignore.hbs  Cargo.toml.hbs  README.md.hbs  flake.nix.hbs  package.json.hbs
crates/scaffold_tnesh_zome/template/.github/workflows/: publish-docs.yml.hbs  publish-npm.yml.hbs  sync-current-main-with-main.yml.hbs  test.yaml.hbs  update-flake-inputs.yaml.hbs  {{#if cachix_cache}}build-and-cache-zomes.yaml{{¡if}}.hbs
crates/scaffold_tnesh_zome/template/.github/workflows/{{#if cachix_cache}}build-and-cache-zomes.yaml{{/: if}}.hbs
crates/scaffold_tnesh_zome/template/docs/: index.md.hbs  introduction.md.hbs  package.json.hbs  setup.md.hbs  {{kebab_case zome_name}}-store.md.hbs
crates/scaffold_tnesh_zome/template/docs/.vitepress/: config.mts.hbs
crates/scaffold_tnesh_zome/template/tests/: package.json.hbs  vitest.config.ts.hbs
crates/scaffold_tnesh_zome/template/tests/src/: setup.ts.hbs
crates/scaffold_tnesh_zome/template/ui/: package.json.hbs
crates/scaffold_tnesh_zome/template/ui/demo/: index.html.hbs
crates/scaffold_tnesh_zome/template/ui/src/: context.ts.hbs  index.ts.hbs  mocks.ts.hbs  types.ts.hbs  {{kebab_case zome_name}}-client.ts.hbs  {{kebab_case zome_name}}-store.ts.hbs
crates/scaffold_tnesh_zome/template/ui/src/elements/: {{kebab_case zome_name}}-context.ts.hbs
crates/scaffold_tnesh_zome/template/workdir/: dna.nix.hbs  dna.yaml.hbs  happ.nix.hbs  happ.yaml.hbs
crates/scaffold_tnesh_zome/template/zomes/coordinator/{{snake_case zome_name}}/: Cargo.toml.hbs  zome.nix.hbs
crates/scaffold_tnesh_zome/template/zomes/coordinator/{{snake_case zome_name}}/src/: lib.rs.hbs
crates/scaffold_tnesh_zome/template/zomes/integrity/{{snake_case zome_name}}/: Cargo.toml.hbs  zome.nix.hbs
crates/sync_npm_rev_dependencies_with_nix/: Cargo.toml  default.nix
crates/sync_npm_rev_dependencies_with_nix/fixture/: flake.nix  package-lock.json  package.json
crates/sync_npm_rev_dependencies_with_nix/src/: lib.rs
(+586 files in other folders)
