[workspace]
members = ["crates/*"]
exclude = [
  "nix/reference-happ",
  "nix/fixtures/module-repo",
  "nix/fixtures/module-repo/zome",
]
resolver = "2"

[workspace.dependencies]
hdi = "0.6.0-dev"
hdk = "0.5.0-dev"
holochain = "0.5.0-dev"
holo_hash = "0.5.0-dev"
holochain_types = "0.5.0-dev"
mr_bundle = "0.5.0-dev"
