[workspace]
members = ["crates/*"]
exclude = [
  "nix/reference-happ",
  "nix/fixtures/module-repo",
  "nix/fixtures/module-repo/zome",
]
resolver = "2"

[workspace.dependencies]
hdi = "0.6.0-rc"
hdk = "0.5.0-rc"
holochain = "0.5.0-rc"
holo_hash = "0.5.0-rc"
holochain_types = "0.5.0-rc"
mr_bundle = "0.5.0-rc"
