[package]
name = "sync_npm_rev_dependencies_with_nix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sync_npm_rev_dependencies_with_nix"
path = "src/lib.rs"

[[bin]]
name = "sync-npm-rev-dependencies-with-nix"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.81"
parse-flake-lock = { git = "https://github.com/DeterminateSystems/flake-checker", branch = "main" }
ignore = "0.4"
serde_json = {version ="1", features = ["std", "preserve_order"]}
serde = "1"
regex = "1"
thiserror = "1.0.58"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
npm_scaffolding_utils = { path = "../npm_scaffolding_utils" }
file_tree_utils = { path = "../file_tree_utils" }
